Don't allow properties in Component elements

QTBUG-10082